--- a/interview150/169.ipynb
+++ b/interview150/169.ipynb
@@ -114,10 +114,12 @@
     "        count=0\n",
     "        candidate=nums[0]\n",
     "        for num in nums:\n",
+    "            if count==0:\n",
+    "                candidate=num\n",
+    "            # 这里我原本用的是elif,这个逻辑是错的\n",
     "            if num==candidate:\n",
     "                count+=1\n",
     "            else:\n",
-    "                candidate=num\n",
     "                count-=1\n",
     "        return candidate\n"
    ]
