--- a/interview150/121.ipynb
+++ b/interview150/121.ipynb
@@ -20,11 +20,66 @@
     "            i+=1\n",
     "        return profit\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List\n",
+    "class Solution:\n",
+    "    def maxProfit(self, prices: List[int]) -> int:\n",
+    "        minprice=prices[0]\n",
+    "        profit=0\n",
+    "        length=len(prices)\n",
+    "        for i in range(0,length):\n",
+    "            # if prices[i]-minprice>profit:\n",
+    "            #     profit=prices[i]-minprice\n",
+    "            profit=max(profit,prices[i]-minprice)\n",
+    "            # if prices[i]<minprice:\n",
+    "            #     minprice=prices[i]\n",
+    "            minprice=min(minprice,prices[i])\n",
+    "            i+=1\n",
+    "        return profit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[range(4, 2)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "nums=[range(4,2)]\n",
+    "print(nums)"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
